--- a/Setup/Applications/PuneetApp/Workflows/test-k8s.yaml
+++ b/Setup/Applications/PuneetApp/Workflows/test-k8s.yaml
@@ -17,6 +17,10 @@ phases:
         stepsInParallel: false
         steps:
           - name: Upgrade Containers
+            properties:
+                commandName: Resize Replication Controller
+                instanceUnitType: COUNT
+                instanceCount: 1
             type: KUBERNETES_DEPLOY
         type: CONTAINER_DEPLOY
       - name: Verify Service
