Harness IO Git Sync. MODIFY: Setup/Applications/PuneetApp/Workflows/test-feb21.yaml

--- a/Setup/Applications/PuneetApp/Workflows/test-feb21.yaml
+++ b/Setup/Applications/PuneetApp/Workflows/test-feb21.yaml
@@ -15,6 +15,13 @@ phases:
         type: CONTAINER_SETUP
       - name: Deploy Containers
         stepsInParallel: false
+        steps:
+          - name: KubernetesDeploy
+            properties:
+                commandName: Resize Replication Controller
+                instanceUnitType: COUNT
+                instanceCount: 1
+            type: KUBERNETES_DEPLOY
         type: CONTAINER_DEPLOY
       - name: Verify Service
         stepsInParallel: false
