Harness IO Git Sync. MODIFY: Setup/Applications/PuneetApp/Workflows/test-feb21.yaml

--- a/Setup/Applications/PuneetApp/Workflows/test-feb21.yaml
+++ b/Setup/Applications/PuneetApp/Workflows/test-feb21.yaml
@@ -40,6 +40,13 @@ phases:
         type: CONTAINER_DEPLOY
       - name: Verify Service
         stepsInParallel: false
+        steps:
+          - name: Http
+            properties:
+                method: GET
+                assertion: ${httpResponseCode}==200
+                url: http://puneet-random.com1/
+            type: HTTP
         type: VERIFY_SERVICE
       - name: Wrap Up
         stepsInParallel: false
