Harness IO Git Sync. MODIFY: Setup/Applications/PuneetApp/Workflows/test-feb21.yaml

--- a/Setup/Applications/PuneetApp/Workflows/test-feb21.yaml
+++ b/Setup/Applications/PuneetApp/Workflows/test-feb21.yaml
@@ -94,7 +94,7 @@ failureStrategies:
   - failureTypes:
       - APPLICATION_ERROR
     executionScope: WORKFLOW
-    repairActionCode: ROLLBACK_WORKFLOW
+    repairActionCode: MANUAL_INTERVENTION
     retryCount: 0
 harnessApiVersion: '1.0'
 type: BASIC
