--- a/Setup/Applications/AzureDemo/Workflows/aks-wf.yaml
+++ b/Setup/Applications/AzureDemo/Workflows/aks-wf.yaml
@@ -1,98 +1,80 @@
+harnessApiVersion: '1.0'
+type: BASIC
 envName: azure-infra
-templatized: false
-phases:
-  - name: Phase 1
-    infraMappingName: puneet-aks
-    serviceName: demosvc
-    computeProviderName: azure-infra
-    provisionNodes: false
-    phaseSteps:
-      - name: Setup Container
-        stepsInParallel: false
-        steps:
-          - name: Kubernetes Service Setup
-            properties:
-                serviceType: LoadBalancer
-                minAutoscaleInstances: 0
-                targetPort: 80
-                useAutoscaler: false
-                replicationControllerName: ${app.name}.${service.name}.${env.name}
-                fixedInstances: '1'
-                protocol: TCP
-                port: 80
-                desiredInstanceCount: fixedInstances
-                maxInstances: 0
-                targetCpuUtilizationPercentage: 0
-                resizeStrategy: DOWNSIZE_OLD_FIRST
-                serviceSteadyStateTimeout: 10
-                maxAutoscaleInstances: 0
-            type: KUBERNETES_SETUP
-        type: CONTAINER_SETUP
-      - name: Deploy Containers
-        stepsInParallel: false
-        steps:
-          - name: Upgrade Containers
-            properties:
-                commandName: Resize Replication Controller
-                instanceUnitType: COUNT
-                instanceCount: 1
-            type: KUBERNETES_DEPLOY
-        type: CONTAINER_DEPLOY
-      - name: Verify Service
-        stepsInParallel: false
-        type: VERIFY_SERVICE
-      - name: Wrap Up
-        stepsInParallel: false
-        type: WRAP_UP
-    type: KUBERNETES
-rollbackPhases:
-  - name: Rollback Phase 1
-    infraMappingName: puneet-aks
-    serviceName: demosvc
-    computeProviderName: azure-infra
-    provisionNodes: false
-    phaseNameForRollback: Phase 1
-    phaseSteps:
-      - name: Deploy Containers
-        statusForRollback: SUCCESS
-        stepsInParallel: false
-        steps:
-          - name: Rollback Containers
-            properties:
-                rollback: true
-            type: KUBERNETES_DEPLOY_ROLLBACK
-        phaseStepNameForRollback: Deploy Containers
-        type: CONTAINER_DEPLOY
-      - name: Setup Container
-        statusForRollback: SUCCESS
-        stepsInParallel: false
-        steps:
-          - name: Rollback Containers
-            properties:
-                rollback: true
-            type: KUBERNETES_SETUP_ROLLBACK
-        phaseStepNameForRollback: Setup Container
-        type: CONTAINER_SETUP
-      - name: Verify Service
-        statusForRollback: SUCCESS
-        stepsInParallel: false
-        phaseStepNameForRollback: Verify Service
-        type: VERIFY_SERVICE
-      - name: Wrap Up
-        stepsInParallel: false
-        type: WRAP_UP
-    type: KUBERNETES
+failureStrategies:
+  - executionScope: WORKFLOW
+    failureTypes:
+      - APPLICATION_ERROR
+    repairActionCode: ROLLBACK_WORKFLOW
+    retryCount: 0
 notificationRules:
   - conditions:
       - FAILED
     executionScope: WORKFLOW
     notificationGroups:
       - Account Administrator
-failureStrategies:
-  - failureTypes:
-      - APPLICATION_ERROR
-    executionScope: WORKFLOW
-    repairActionCode: ROLLBACK_WORKFLOW
-    retryCount: 0
-harnessApiVersion: '1.0'
-type: BASIC
+phases:
+  - type: KUBERNETES
+    computeProviderName: azure-infra
+    infraMappingName: puneet-aks
+    name: Phase 1
+    phaseSteps:
+      - type: CONTAINER_SETUP
+        name: Setup Container
+        stepsInParallel: false
+      - type: CONTAINER_DEPLOY
+        name: Deploy Containers
+        steps:
+          - type: KUBERNETES_DEPLOY
+            name: Upgrade Containers
+            properties:
+                commandName: Resize Replication Controller
+                instanceUnitType: COUNT
+                instanceCount: 1
+        stepsInParallel: false
+      - type: VERIFY_SERVICE
+        name: Verify Service
+        stepsInParallel: false
+      - type: WRAP_UP
+        name: Wrap Up
+        stepsInParallel: false
+    provisionNodes: false
+    serviceName: demosvc
+rollbackPhases:
+  - type: KUBERNETES
+    computeProviderName: azure-infra
+    infraMappingName: puneet-aks
+    name: Rollback Phase 1
+    phaseNameForRollback: Phase 1
+    phaseSteps:
+      - type: CONTAINER_DEPLOY
+        name: Deploy Containers
+        phaseStepNameForRollback: Deploy Containers
+        statusForRollback: SUCCESS
+        steps:
+          - type: KUBERNETES_DEPLOY_ROLLBACK
+            name: Rollback Containers
+            properties:
+                rollback: true
+        stepsInParallel: false
+      - type: CONTAINER_SETUP
+        name: Setup Container
+        phaseStepNameForRollback: Setup Container
+        statusForRollback: SUCCESS
+        steps:
+          - type: KUBERNETES_SETUP_ROLLBACK
+            name: Rollback Containers
+            properties:
+                rollback: true
+        stepsInParallel: false
+      - type: VERIFY_SERVICE
+        name: Verify Service
+        phaseStepNameForRollback: Verify Service
+        statusForRollback: SUCCESS
+        stepsInParallel: false
+      - type: WRAP_UP
+        name: Wrap Up
+        stepsInParallel: false
+    provisionNodes: false
+    serviceName: demosvc
+templatized: false
