Harness IO Git Sync. MODIFY: Setup/Applications/AzureKey/Workflows/test-key.yaml

--- a/Setup/Applications/AzureKey/Workflows/test-key.yaml
+++ b/Setup/Applications/AzureKey/Workflows/test-key.yaml
@@ -30,6 +30,10 @@ phases:
         steps:
           - type: KUBERNETES_DEPLOY
             name: Upgrade Containers
+            properties:
+                commandName: Resize Replication Controller
+                instanceUnitType: COUNT
+                instanceCount: 1
         stepsInParallel: false
       - type: VERIFY_SERVICE
         name: Verify Service
