Harness IO Git Sync. MODIFY: Setup/Applications/SshTest/Workflows/deployzip.yaml

--- a/Setup/Applications/SshTest/Workflows/deployzip.yaml
+++ b/Setup/Applications/SshTest/Workflows/deployzip.yaml
@@ -31,6 +31,11 @@ phases:
         stepsInParallel: false
       - type: DISABLE_SERVICE
         name: Disable Service
+        steps:
+          - type: COMMAND
+            name: Start
+            properties:
+                commandName: Start
         stepsInParallel: false
       - type: DEPLOY_SERVICE
         name: Deploy Service
