Harness IO Git Sync. MODIFY: Setup/Applications/AzureKey/Workflows/test.yaml

--- a/Setup/Applications/AzureKey/Workflows/test.yaml
+++ b/Setup/Applications/AzureKey/Workflows/test.yaml
@@ -24,6 +24,18 @@ phases:
         steps:
           - type: KUBERNETES_SETUP
             name: Kubernetes Service Setup
+            properties:
+                serviceType: None
+                replicationControllerName: ${app.name}.${service.name}.${env.name}
+                fixedInstances: '1'
+                desiredInstanceCount: fixedInstances
+                minAutoscaleInstances: 0
+                maxInstances: 10
+                targetCpuUtilizationPercentage: 0
+                useAutoscaler: false
+                resizeStrategy: RESIZE_NEW_FIRST
+                serviceSteadyStateTimeout: 10
+                maxAutoscaleInstances: 0
         stepsInParallel: false
       - type: CONTAINER_DEPLOY
         name: Deploy Containers
