Harness IO Git Sync. MODIFY: Setup/Applications/AzureKey/Workflows/test.yaml

--- a/Setup/Applications/AzureKey/Workflows/test.yaml
+++ b/Setup/Applications/AzureKey/Workflows/test.yaml
@@ -33,7 +33,7 @@ phases:
                 maxInstances: 10
                 targetCpuUtilizationPercentage: 0
                 useAutoscaler: false
-                resizeStrategy: RESIZE_NEW_FIRST
+                resizeStrategy: DOWNSIZE_OLD_FIRST
                 serviceSteadyStateTimeout: 10
                 maxAutoscaleInstances: 0
         stepsInParallel: false
