Harness IO Git Sync. MODIFY: Setup/Applications/AzureKey/Environments/Prod/Service Infrastructure/puneet-inframap-dk10.yaml

--- a/Setup/Applications/AzureKey/Environments/Prod/Service Infrastructure/puneet-inframap-dk10.yaml
+++ b/Setup/Applications/AzureKey/Environments/Prod/Service Infrastructure/puneet-inframap-dk10.yaml
@@ -7,6 +7,6 @@ computeProviderName: kubernetes_cluster2
 computeProviderType: KUBERNETES_CLUSTER
 deploymentType: KUBERNETES
 infraMappingType: DIRECT_KUBERNETES
-namespace: default
+namespace: default1
 password: safeharness:zV256bjFQ8OH3DOQ6YJK4g
 serviceName: keytest
