Harness IO Git Sync. MODIFY: Setup/Applications/SshTest/Workflows/test.yaml

--- a/Setup/Applications/SshTest/Workflows/test.yaml
+++ b/Setup/Applications/SshTest/Workflows/test.yaml
@@ -32,6 +32,11 @@ phases:
         stepsInParallel: false
       - type: DISABLE_SERVICE
         name: Disable Service
+        steps:
+          - type: COMMAND
+            name: TestCommand
+            properties:
+                commandName: TestCommand
         stepsInParallel: false
       - type: DEPLOY_SERVICE
         name: Deploy Service
