--- a/Setup/Applications/SshTest/Workflows/test.yaml
+++ b/Setup/Applications/SshTest/Workflows/test.yaml
@@ -37,6 +37,14 @@ phases:
             name: TestCommand
             properties:
                 commandName: TestCommand
+          - type: SHELL_SCRIPT
+            name: Shell Script
+            properties:
+                commandPath: 'c:'
+                host: 104.209.40.95
+                scriptString: dir
+                timeoutMillis: 5000
+                sshKeyRef: OnP7d9irT1CBDqiu-TpDsQ
         stepsInParallel: false
       - type: DEPLOY_SERVICE
         name: Deploy Service
