Harness IO Git Sync. MODIFY: Setup/Cloud Providers/aws-key.yaml

--- a/Setup/Cloud Providers/aws-key.yaml
+++ b/Setup/Cloud Providers/aws-key.yaml
@@ -1,4 +1,4 @@
 harnessApiVersion: '1.0'
 type: AWS
 accessKey: AKIAIVRKRUMJ3LAVBMSQ
-secretKey: safeharness:5rDbL9HNSjCoCyEcEscZXQ
+secretKey: amazonkms:5rDbL9HNSjCoCyEcEscZXQ
