--- a/Setup/Cloud Providers/1life1.yaml
+++ b/Setup/Cloud Providers/1life1.yaml
@@ -4,5 +4,5 @@ clientCert: amazonkms:gaTdvg5gRVOx1FohVtmftQ
 clientKey: amazonkms:jBNwqYnBSZu7o0PxN6EHgQ
 clientKeyPassphrase: safeharness:yP52ilH-SXG66p0lwl8qBw
 masterUrl: https://puneet-aks-561a30c0.hcp.eastus.azmk8s.io
-password: safeharness:mCazJb0HQy-wedvl23k9Hg
+password: amazonkms:mCazJb0HQy-wedvl23k9Hg
 username: clusterUser_puneet-aks_puneet-aks
