Harness IO Git Sync. MODIFY: Setup/Cloud Providers/1life.yaml

--- a/Setup/Cloud Providers/1life.yaml
+++ b/Setup/Cloud Providers/1life.yaml
@@ -3,6 +3,6 @@ caCert: safeharness:-Lg8ppAvTvWNScFdMohqVA
 clientCert: amazonkms:gaTdvg5gRVOx1FohVtmftQ
 clientKey: amazonkms:jBNwqYnBSZu7o0PxN6EHgQ
 clientKeyPassphrase: safeharness:yP52ilH-SXG66p0lwl8qBw
-masterUrl: https://puneet-aks-561a30c0.hcp.eastus.azmk8s.io
+masterUrl: https://puneet-aks-561a30c0.hcp.eastus.azmk8s.io:443
 password: amazonkms:mCazJb0HQy-wedvl23k9Hg
 username: clusterUser_puneet-aks_puneet-aks
