--- a/Setup/Cloud Providers/exploration-gcp.yaml
+++ b/Setup/Cloud Providers/exploration-gcp.yaml
@@ -1,3 +1,3 @@
-serviceAccountKeyFileContent: safeharness:CMGZxui5TPK-jJOkHSndwA
 harnessApiVersion: '1.0'
 type: GCP
+serviceAccountKeyFileContent: amazonkms:CMGZxui5TPK-jJOkHSndwA
