--- a/Setup/Applications/SshTest/Environments/Test/Service Infrastructure/mynme.yaml
+++ b/Setup/Applications/SshTest/Environments/Test/Service Infrastructure/mynme.yaml
@@ -2,7 +2,7 @@ harnessApiVersion: '1.0'
 type: PHYSICAL_DATA_CENTER_SSH
 computeProviderName: physical_data_center
 computeProviderType: PHYSICAL_DATA_CENTER
-connection: User/Password
+connection: puneetKey
 deploymentType: SSH
 hostNames:
   - 10.0.0.1
