--- a/Setup/Applications/SshTest/Workflows/deployzip.yaml
+++ b/Setup/Applications/SshTest/Workflows/deployzip.yaml
@@ -40,7 +40,7 @@ phases:
                 host: 104.209.40.95
                 scriptString: Powershell Get-ChildItem
                 timeoutMillis: 60000
-                winRmConfigRef: Jwff2yD9RyGjT9Ls0xfJrA
+                winRmConfigRef: nu1YJHFmToGzg8cPgOHsnw
                 connectionType: WINRM
                 WinRmConfigRef: 76nxg14eSquDf1tUtK3qKA
         stepsInParallel: false
