Harness IO Git Sync. MODIFY: Setup/Applications/SshTest/Workflows/deployzip.yaml

--- a/Setup/Applications/SshTest/Workflows/deployzip.yaml
+++ b/Setup/Applications/SshTest/Workflows/deployzip.yaml
@@ -38,7 +38,9 @@ phases:
             properties:
                 commandPath: 'c:'
                 host: 104.209.40.95
-                scriptString: Powershell Write-Host "hello world"
+                scriptString: |-
+                    Powershell Write-Host "hello world"
+                    Get-NetAdapter
                 timeoutMillis: 60000
                 winRmConfigRef: nu1YJHFmToGzg8cPgOHsnw
                 connectionType: WINRM
