--- a/Setup/Applications/SshTest/Workflows/deployzip.yaml
+++ b/Setup/Applications/SshTest/Workflows/deployzip.yaml
@@ -39,7 +39,7 @@ phases:
                 connectionAttributes: nu1YJHFmToGzg8cPgOHsnw
                 commandPath: c:\
                 host: 104.209.40.95
-                scriptString: powercfg /list & dir & echo "Hello World" & timeout /t 30 & systeminfo
+                scriptString: powercfg /list
                 timeoutMillis: 300000
                 winRmConfigRef: nu1YJHFmToGzg8cPgOHsnw
                 connectionType: WINRM
