Harness IO Git Sync. MODIFY: Setup/Applications/SshTest/Workflows/deployzip.yaml

--- a/Setup/Applications/SshTest/Workflows/deployzip.yaml
+++ b/Setup/Applications/SshTest/Workflows/deployzip.yaml
@@ -44,6 +44,8 @@ phases:
                     $name = "Don"
                     $prompt = "My name is $name"
                     Write-Host $prompt
+                    Write-Host "Hello World"
+                    Get-Process
                 timeoutMillis: 300000
                 winRmConfigRef: nu1YJHFmToGzg8cPgOHsnw
                 connectionType: WINRM
