Harness IO Git Sync. MODIFY: Setup/Applications/SshTest/Workflows/deployzip.yaml

--- a/Setup/Applications/SshTest/Workflows/deployzip.yaml
+++ b/Setup/Applications/SshTest/Workflows/deployzip.yaml
@@ -44,7 +44,7 @@ phases:
                     $name = "Don"
                     $prompt = "My name is $name"
                     Write-Host $prompt
-                    Write-Host "Hello World
+                    Write-Host "Hello World"
                     ipconfig
                 timeoutMillis: 300000
                 winRmConfigRef: nu1YJHFmToGzg8cPgOHsnw
