--- a/Setup/Applications/SshTest/Workflows/deployzip.yaml
+++ b/Setup/Applications/SshTest/Workflows/deployzip.yaml
@@ -40,11 +40,7 @@ phases:
                 commandPath: c:\
                 scriptType: POWERSHELL
                 host: 104.209.40.95
-                scriptString: |-
-                    $name = 'Don'
-                    $prompt = "My name is $name"
-                    Write-Host $prompt
-                    Write-Host "Hello World"
+                scriptString: Get-Process | where {$_.cpu -gt 1000}
                 timeoutMillis: 300000
                 winRmConfigRef: nu1YJHFmToGzg8cPgOHsnw
                 connectionType: WINRM
