Harness IO Git Sync. MODIFY: Setup/Applications/SshTest/Workflows/test_winrm.yaml

--- a/Setup/Applications/SshTest/Workflows/test_winrm.yaml
+++ b/Setup/Applications/SshTest/Workflows/test_winrm.yaml
@@ -32,6 +32,17 @@ phases:
         stepsInParallel: false
       - type: DISABLE_SERVICE
         name: Disable Service
+        steps:
+          - type: SHELL_SCRIPT
+            name: Shell Script
+            properties:
+                connectionAttributes: nu1YJHFmToGzg8cPgOHsnw
+                commandPath: c:\
+                scriptType: POWERSHELL
+                host: 104.209.40.95
+                scriptString: Get-ChildItem
+                timeoutMillis: 3600000
+                connectionType: WINRM
         stepsInParallel: false
       - type: DEPLOY_SERVICE
         name: Deploy Service
