--- a/Setup/Applications/SshTest/Services/legacy/Commands/TestCommand.yaml
+++ b/Setup/Applications/SshTest/Services/legacy/Commands/TestCommand.yaml
@@ -2,7 +2,7 @@ harnessApiVersion: '1.0'
 type: OTHER
 commandUnitType: COMMAND
 commandUnits:
-  - command: dir
+  - command: dir1
     commandUnitType: EXEC
     name: Exec-0
     workingDirectory: ${WINGS_RUNTIME_PATH}
