Harness IO Git Sync. MODIFY: Setup/Applications/SshTest/Services/legacy/Commands/TestCommand.yaml

--- a/Setup/Applications/SshTest/Services/legacy/Commands/TestCommand.yaml
+++ b/Setup/Applications/SshTest/Services/legacy/Commands/TestCommand.yaml
@@ -5,5 +5,5 @@ commandUnits:
   - command: dir
     commandUnitType: EXEC
     name: Exec-0
-    workingDirectory: ${WINGS_RUNTIME_PATH}
+    workingDirectory: ${WINGS_RUNTIME_PATH1}
 targetToAllEnv: true
