Harness IO Git Sync. MODIFY: Setup/Applications/SshTest/Services/legacy/Commands/TestCommand.yaml

--- a/Setup/Applications/SshTest/Services/legacy/Commands/TestCommand.yaml
+++ b/Setup/Applications/SshTest/Services/legacy/Commands/TestCommand.yaml
@@ -4,6 +4,7 @@ commandUnitType: COMMAND
 commandUnits:
   - command: dir
     commandUnitType: EXEC
+    deploymentType: SSH
     name: Exec-0
     workingDirectory: ${WINGS_RUNTIME_PATH}
 targetToAllEnv: true
