Harness IO Git Sync. MODIFY: Setup/Applications/SshTest/Services/legacy/Commands/TestCommand.yaml

--- a/Setup/Applications/SshTest/Services/legacy/Commands/TestCommand.yaml
+++ b/Setup/Applications/SshTest/Services/legacy/Commands/TestCommand.yaml
@@ -2,7 +2,7 @@ harnessApiVersion: '1.0'
 type: OTHER
 commandUnitType: COMMAND
 commandUnits:
-  - command: dir1
+  - command: dir
     commandUnitType: EXEC
     deploymentType: SSH
     name: Exec-0
