--- a/Setup/Applications/SshTest/Workflows/IIS-SSH-Deploy.yaml
+++ b/Setup/Applications/SshTest/Workflows/IIS-SSH-Deploy.yaml
@@ -40,6 +40,10 @@ phases:
             name: Install
             properties:
                 commandName: Install
+          - type: COMMAND
+            name: Start_2
+            properties:
+                commandName: Start
         stepsInParallel: false
       - type: ENABLE_SERVICE
         name: Enable Service
