Harness IO Git Sync. MODIFY: Setup/Applications/SshTest/Defaults.yaml

--- a/Setup/Applications/SshTest/Defaults.yaml
+++ b/Setup/Applications/SshTest/Defaults.yaml
@@ -2,8 +2,8 @@ harnessApiVersion: '1.0'
 type: APPLICATION_DEFAULTS
 defaults:
   - name: BACKUP_PATH
-    value: '%USERPROFILE%/${app.name}/${service.name}/${env.name}/backup/${timestampId}'
+    value: '%USERPROFILE%\${app.name}\${service.name}\${env.name}\backup\${timestampId}'
   - name: STAGING_PATH
-    value: $HOME/${app.name}/${service.name}/${env.name}/staging/${timestampId}
+    value: '%USERPROFILE%/${app.name}/${service.name}/${env.name}/staging/${timestampId}'
   - name: RUNTIME_PATH
-    value: $HOME/${app.name}/${service.name}/${env.name}/runtime
+    value: '%USERPROFILE%/${app.name}/${service.name}/${env.name}/runtime'
