--- a/Setup/Applications/SshTest/Defaults.yaml
+++ b/Setup/Applications/SshTest/Defaults.yaml
@@ -6,4 +6,4 @@ defaults:
   - name: STAGING_PATH
     value: '%USERPROFILE%\${app.name}\${service.name}\${env.name}\staging\${timestampId}'
   - name: RUNTIME_PATH
-    value: '%USERPROFILE%\${app.name}\${service.name}\${env.name}\runtime'
+    value: '%USERPROFILE%'
